# kcron

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  AUTHORS  CMakeLists.txt  CMakePresets.json  ChangeLog  Makefile.am  Messages.sh  README  README.hacking  README.translators  TODO  config-kcron.h.cmake  configure.in.in  ctcron.cpp  ctcron.h  ctdebug.h  ctdom.cpp  ctdom.h  ctdow.cpp  ctdow.h  ctexception.h  cthost.cpp  cthost.h  cthour.h  cti18n.h  ctminute.h  ctmonth.cpp  ctmonth.h  cttask.cpp  cttask.h  ctunit.cpp  ctunit.h  ctvariable.cpp  ctvariable.h  kcron.categories  kcron.desktop  kcron.lsm  (+52 more)
autotests/: CMakeLists.txt  taskvalidatortest.cpp
doc/: CMakeLists.txt  Makefile.am  index.cvlog  index.docbook
doc/kcontrol/: CMakeLists.txt  index.docbook
doc/kcontrol5/: CMakeLists.txt  index.docbook
docs/: Makefile.am
docs/en/: Makefile.am  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html  index.sgml
po/af/: kcm_cron.po  kcron.po
po/ar/: kcm_cron.po  kcron.po
po/ar/docs/kcontrol/kcron/: index.docbook
po/ast/: kcm_cron.po  kcron.po
po/be/: kcm_cron.po  kcron.po
po/bg/: kcm_cron.po  kcron.po
po/br/: kcm_cron.po  kcm_kcron.po  kcron.po
po/bs/: kcm_cron.po  kcron.po
po/ca/: kcm_cron.po  kcm_kcron.po  kcron.po
po/ca/docs/kcontrol/kcron/: index.docbook
po/ca/docs/kcontrol5/kcron/: index.docbook
po/ca@valencia/: kcm_cron.po  kcm_kcron.po  kcron.po
po/cs/: kcm_cron.po  kcron.po
po/cy/: kcm_cron.po  kcron.po
po/da/: kcm_cron.po  kcron.po
po/de/: kcm_cron.po  kcm_kcron.po  kcron.po
po/de/docs/kcontrol5/kcron/: index.docbook
po/el/: kcm_cron.po  kcron.po
po/en_GB/: kcm_cron.po  kcron.po
po/eo/: kcm_cron.po  kcron.po
po/es/: kcm_cron.po  kcron.po
po/es/docs/kcontrol/kcron/: index.docbook
po/et/: kcm_cron.po  kcron.po
po/et/docs/kcontrol/kcron/: index.docbook
po/eu/: kcm_cron.po  kcm_kcron.po  kcron.po
po/fa/: kcm_cron.po  kcm_kcron.po  kcron.po
po/fi/: kcm_cron.po  kcron.po
po/fr/: kcm_cron.po  kcron.po
po/fr/docs/kcontrol/kcron/: index.docbook
po/ga/: kcm_cron.po  kcron.po
po/gl/: kcm_cron.po  kcron.po
po/he/: kcm_cron.po  kcron.po
po/hi/: kcm_cron.po  kcron.po
po/hne/: kcm_cron.po  kcron.po
po/hr/: kcm_cron.po  kcron.po
po/hu/: kcm_cron.po  kcron.po
po/ia/: kcm_cron.po  kcron.po
po/is/: kcm_cron.po  kcron.po
po/it/: kcm_cron.po  kcron.po
po/it/docs/kcontrol/kcron/: index.docbook
po/ja/: kcm_cron.po  kcron.po
po/ka/: kcm_cron.po  kcron.po
po/kk/: kcm_cron.po  kcron.po
po/km/: kcm_cron.po  kcm_kcron.po  kcron.po
po/ko/: kcm_cron.po  kcron.po
po/ko/docs/kcontrol/kcron/: index.docbook
po/ku/: kcm_cron.po  kcm_kcron.po  kcron.po
po/lt/: kcm_cron.po  kcron.po
po/lv/: kcm_cron.po  kcron.po
po/mk/: kcm_cron.po  kcm_kcron.po  kcron.po
po/mr/: kcm_cron.po  kcron.po
po/ms/: kcm_cron.po  kcron.po
po/nb/: kcm_cron.po  kcm_kcron.po  kcron.po
po/nds/: kcm_cron.po  kcron.po
po/ne/: kcm_cron.po  kcron.po
po/nl/: kcm_cron.po  kcron.po
po/nl/docs/kcontrol/kcron/: index.docbook
po/nl/docs/kcontrol5/kcron/: index.docbook
po/nn/: kcm_cron.po  kcm_kcron.po  kcron.po
po/oc/: kcm_cron.po  kcron.po
po/pa/: kcm_cron.po  kcron.po
po/pl/: kcm_cron.po  kcm_kcron.po  kcron.po
po/pt/: kcm_cron.po  kcm_kcron.po  kcron.po
po/pt/docs/kcontrol5/kcron/: index.docbook
po/pt_BR/: kcm_cron.po  kcm_kcron.po  kcron.po
po/pt_BR/docs/kcontrol5/kcron/: index.docbook
po/ro/: kcm_cron.po  kcron.po
po/ru/: kcm_cron.po  kcm_kcron.po  kcron.po
po/ru/docs/kcontrol5/kcron/: index.docbook
po/sa/: kcm_cron.po  kcron.po
po/se/: kcm_cron.po  kcm_kcron.po  kcron.po
po/sk/: kcm_cron.po  kcm_kcron.po  kcron.po
po/sl/: kcm_cron.po  kcm_kcron.po  kcron.po
po/sq/: kcm_cron.po  kcron.po
po/sr/: kcm_cron.po  kcron.po
po/sr@ijekavian/: kcm_cron.po  kcron.po
po/sr@ijekavianlatin/: kcm_cron.po  kcron.po
po/sr@latin/: kcm_cron.po  kcron.po
po/sv/: kcm_cron.po  kcron.po
po/sv/docs/kcontrol5/kcron/: index.docbook
po/ta/: kcm_cron.po  kcron.po
po/tg/: kcm_cron.po  kcm_kcron.po  kcron.po
po/th/: kcm_cron.po  kcm_kcron.po  kcron.po
po/tr/: kcm_cron.po  kcron.po
po/ug/: kcm_cron.po  kcron.po
po/uk/: kcm_cron.po  kcron.po
po/uk/docs/kcontrol/kcron/: index.docbook
po/vi/: kcm_cron.po  kcron.po
po/wa/: kcm_cron.po  kcron.po
po/xh/: kcm_cron.po  kcron.po
po/zh_CN/: kcm_cron.po  kcm_kcron.po  kcron.po
po/zh_CN/docs/kcontrol5/kcron/: index.docbook
po/zh_HK/: kcm_cron.po  kcron.po
po/zh_TW/: kcm_cron.po  kcron.po
src/: CMakeLists.txt  cronPrinter.cpp  cronPrinter.h  crontabPrinter.cpp  crontabPrinter.h  crontabPrinterWidget.cpp  crontabPrinterWidget.h  crontabWidget.cpp  crontabWidget.h  genericListWidget.cpp  genericListWidget.h  genericmodel.cpp  genericmodel.h  kcmCron.cpp  kcmCron.h  kcm_cron.desktop  kcm_cron.json  kcron.cpp  kcron.desktop  kcron.h  kcronHelper.cpp  kcronHelper.h  kcronIcons.cpp  kcronIcons.h  kcronui.rc  ktapp.cpp  ktapp.h  kticon.cpp  kticon.h  ktlistcron.cpp  ktlistcron.h  ktlistitem.cpp  ktlistitem.h  ktlisttask.cpp  ktlisttasks.cpp  ktlistvar.cpp  ktlistvar.h  ktlistvars.cpp  ktlistvars.h  ktprint.cpp  (+34 more)
src/crontablib/: CMakeLists.txt  ctGlobalCron.cpp  ctGlobalCron.h  ctHelper.cpp  ctHelper.h  ctInitializationError.cpp  ctInitializationError.h  ctSaveStatus.cpp  ctSaveStatus.h  ctSystemCron.cpp  ctSystemCron.h  ctcron.cpp  ctcron.h  ctdom.cpp  ctdom.h  ctdow.cpp  ctdow.h  cthost.cpp  cthost.h  cthour.cpp  cthour.h  cti18n.h  ctminute.cpp  ctminute.h  ctmonth.cpp  ctmonth.h  cttask.cpp  cttask.h  ctunit.cpp  ctunit.h  ctvariable.cpp  ctvariable.h  logging.h
src/helper/: CMakeLists.txt  README  kcronhelper.cpp  kcronhelper.h  local.kcron.crontab.actions
src/ui/: CheckedModel.qml  Onboarding.qml  Table.qml  TaskPage.qml  TasksComponent.qml  TimeCard.qml  VariablePage.qml  VariablesComponent.qml  main.qml
