####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = Makefile.am index.docbook

install-data-local:
	$(mkinstalldirs) $(kde_htmldir)/en/kcron/
	$(INSTALL_DATA) index.docbook $(kde_htmldir)/en/kcron/

uninstall-local:
	-rm -f $(kde_htmldir)/en/kcron/index.docbook

####### kdevelop will overwrite this part!!! (end)############
