####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = index.html Makefile.am index-1.html index-2.html index-3.html index-4.html index-5.html index-6.html index.sgml 

install-data-local:
	$(mkinstalldirs) $(kde_htmldir)/en/kcron/
	$(INSTALL_DATA) index.html $(kde_htmldir)/en/kcron/index.html
	$(mkinstalldirs) $(kde_htmldir)/en/kcron/
	$(INSTALL_DATA) index-1.html $(kde_htmldir)/en/kcron/index-1.html
	$(mkinstalldirs) $(kde_htmldir)/en/kcron/
	$(INSTALL_DATA) index-2.html $(kde_htmldir)/en/kcron/index-2.html
	$(mkinstalldirs) $(kde_htmldir)/en/kcron/
	$(INSTALL_DATA) index-3.html $(kde_htmldir)/en/kcron/index-3.html
	$(mkinstalldirs) $(kde_htmldir)/en/kcron/
	$(INSTALL_DATA) index-4.html $(kde_htmldir)/en/kcron/index-4.html
	$(mkinstalldirs) $(kde_htmldir)/en/kcron/
	$(INSTALL_DATA) index-5.html $(kde_htmldir)/en/kcron/index-5.html
	$(mkinstalldirs) $(kde_htmldir)/en/kcron/
	$(INSTALL_DATA) index-6.html $(kde_htmldir)/en/kcron/index-6.html

uninstall-local:
	-rm -f $(kde_htmldir)/en/kcron/index.html
	-rm -f $(kde_htmldir)/en/kcron/index-1.html
	-rm -f $(kde_htmldir)/en/kcron/index-2.html
	-rm -f $(kde_htmldir)/en/kcron/index-3.html
	-rm -f $(kde_htmldir)/en/kcron/index-4.html
	-rm -f $(kde_htmldir)/en/kcron/index-5.html
	-rm -f $(kde_htmldir)/en/kcron/index-6.html

####### kdevelop will overwrite this part!!! (end)############
